<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="movil.musica.LoginActivity"
    android:stretchColumns="*"
    >

    <android.support.design.widget.AppBarLayout
        android:layout_height="0dp"
        android:layout_weight="3"
        >
        <ImageView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:background="#333333"
            android:src="@drawable/login"
            />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/small"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        >


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="text"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/medium"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <TableRow>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:text="@string/signin"
            />
        <Button
            android:id="@+id/btnEntrar"
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:text="@string/in"
            />
    </TableRow>

</TableLayout>
